--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"postcss": "8.4.23",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"tailwindcss": "3.3.2"
+		"react-hot-toast": "^2.4.1",
+		"tailwindcss": "3.3.2",
+		"uuid": "^9.0.1"
 	}
 }
